<resources>
    <string name="app_name">Q记</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="loginactivty_login">登录</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">消息</string>
    <string name="title_dashboard">好友</string>
    <string name="title_notifications">圈子</string>
    <string name="title_userinfo">我的</string>
    <string name="title_activity_userinfo">UserinfoActivity</string>
    <string name="friend_add_friend">添加朋友</string>
    <string name="friend_request">朋友请求</string>
    <string name="friend_mygroup">我的群组</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_burse">我的钱包</string>
    <string name="mine_notice">我的通知</string>
    <string name="mine_help">帮助与反馈</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

</resources>
