<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <include
        android:id="@+id/fragment_back_title"
        layout="@layout/back_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/dark_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:background="@drawable/edt_corner_search"
       android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/common_icon_search" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="搜索朋友或群组"
            android:singleLine="true"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/white">

      <TextView
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_height="wrap_content"
          android:text="@string/friend_add_friend"
          android:drawableTop="@mipmap/add_friend"
          android:drawablePadding="5dp"
          android:textSize="10sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/friend_request"
            android:drawableTop="@mipmap/friend_request"
            android:drawablePadding="5dp"
            android:textSize="10sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/friend_mygroup"
            android:drawableTop="@mipmap/my_group"
            android:drawablePadding="5dp"
            android:textSize="10sp"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/frend_recyler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>